--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 
 <body>
 	<h1>Hello, World!</h1>
+
+<!-- Paasisalto tulee tanne! -->
+	<hr>
+
+	<footer>
+		<p>Copyright &copy; 2023, Juhon Kahvila.</p>
+	</footer>
+
+
 </body>
+
+
 
 </html>
