--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
 	<title>Juhon Kahvila</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 </head>
 
 <body>
