--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
 	<title>Juhon Kahvila</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
 </head>
 
 <body>
-	<h1>Hello, World!</h1>
+	<h1>Tico Cafe!</h1>
+	<p>Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
+	<h2>Teemme kahvia vain aidoista pavuista</h2>
+	<p>Kahvimme tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä poimioita, joille maksamme
+		palkkaa</p>
+	<h3>Arabica</h3>
+	<p>Arabica on kahvilaaduista parhain ja maukkain ja sopii opiskelijan kahvinhimoon sekä kofeiiniaddiktioon.</p>
 
-<!-- Paasisalto tulee tanne! -->
+
+	<!-- Paasisalto tulee tanne! -->
 	<hr>
 
 	<footer>
