--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
 	<title>Juhon Kahvila</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- Linkitetään tähän CSS tyylitiedosto -->
+	<link rel="stylesheet" href="tyyli.css">
+
 </head>
 
 <body>
 	<h1>Tico Cafe!</h1>
+
+	<figure>
+	<img id="vuorikuva" src="kuvat/mountain.jpg" alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
+	<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
+	</figure>
+	
 	<p>Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
 	<h2>Teemme kahvia vain aidoista pavuista</h2>
 	<p>Kahvimme tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä poimioita, joille maksamme
@@ -16,10 +26,11 @@
 	<h3>Arabica</h3>
 	<p>Arabica on kahvilaaduista parhain ja maukkain ja sopii opiskelijan kahvinhimoon sekä kofeiiniaddiktioon.</p>
 
-
+	<!-- kommentti -->
 	<!-- Paasisalto tulee tanne! -->
+	<br>
 	<hr>
-
+	<br>
 	<footer>
 		<p>Copyright &copy; 2023, Juhon Kahvila.</p>
 	</footer>
