--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
 	<!-- Linkitetään tähän CSS tyylitiedosto -->
 	<link rel="stylesheet" href="tyyli.css">
-
 </head>
 
 <body>
 	<h1>Tico Cafe!</h1>
 
 	<figure>
-	<img id="vuorikuva" src="kuvat/mountain.jpg" alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
-	<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
+		<img id="vuorikuva" src="kuvat/mountain.jpg"
+			alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
+		<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
 	</figure>
-	
-	<p>Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
+
+	<p class="esittely">Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
 	<h2>Teemme kahvia vain aidoista pavuista</h2>
 	<p>Kahvimme tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä poimioita, joille maksamme
 		palkkaa</p>
@@ -37,7 +37,5 @@
 
 
 </body>
-
-
 
 </html>
