--- a/index.html
+++ b/index.html
@@ -8,20 +8,35 @@
 
 	<!-- Linkitetään tähän CSS tyylitiedosto -->
 	<link rel="stylesheet" href="tyyli.css">
+
+	<!-- Tästä alkaa navigaatio -->
+	<nav>
+		<a href="index.html" id="valittu">Juhon Kahvila</a>
+		<a href="kahvit.html">Kahvimme</a>
+		<a href="galleria.html">Galleria</a>
+		<a href="yhteys.html">Ota yhteyttä</a>
+
+	</nav>
+
 </head>
 
 <body>
+	<header>
+	
+        <!-- Other header content goes here -->
+    
 	<h1>Tico Cafe!</h1>
+	
 
 	<figure>
 		<img id="vuorikuva" src="kuvat/mountain.jpg"
 			alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
 		<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
 	</figure>
-
+	</header>
 	<p class="esittely">Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
 	<h2>Teemme kahvia vain aidoista pavuista</h2>
-	<p>Kahvimme tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä poimioita, joille maksamme
+	<p><strong>Kahvimme</strong> tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä poimioita, joille maksamme
 		palkkaa</p>
 	<h3>Arabica</h3>
 	<p>Arabica on kahvilaaduista parhain ja maukkain ja sopii opiskelijan kahvinhimoon sekä kofeiiniaddiktioon.</p>
