--- a/yhteys.html
+++ b/yhteys.html
@@ -11,10 +11,10 @@
 
 	<!-- Tästä alkaa navigaatio -->
 	<nav>
-		<a href="index.html" id="valittu">Juhon Kahvila</a>
+		<a href="index.html">Juhon Kahvila</a>
 		<a href="kahvit.html">Kahvimme</a>
 		<a href="galleria.html">Galleria</a>
-		<a href="yhteys.html">Ota yhteyttä</a>
+		<a href="yhteys.html" id="valittu">Ota yhteyttä</a>
 	</nav>
 </head>
 
@@ -22,7 +22,7 @@
 	<header>
 		<!-- Other header content goes here -->
 
-		<h1>Juhon Kahvila</h1>
+		<h1>Ota yhteyttä</h1>
 
 		<figure>
 			<img id="vuorikuva" src="kuvat/mountain.jpg"
