--- a/galleria.html
+++ b/galleria.html
@@ -11,9 +11,9 @@
 
 	<!-- Tästä alkaa navigaatio -->
 	<nav>
-		<a href="index.html" id="valittu">Juhon Kahvila</a>
+		<a href="index.html">Juhon Kahvila</a>
 		<a href="kahvit.html">Kahvimme</a>
-		<a href="galleria.html">Galleria</a>
+		<a href="galleria.html" id="valittu">Galleria</a>
 		<a href="yhteys.html">Ota yhteyttä</a>
 	</nav>
 </head>
@@ -22,7 +22,7 @@
 	<header>
 		<!-- Other header content goes here -->
 
-		<h1>Juhon Kahvila</h1>
+		<h1>Galleria</h1>
 
 		<figure>
 			<img id="vuorikuva" src="kuvat/mountain.jpg"
