--- a/index.html
+++ b/index.html
@@ -18,25 +18,39 @@
 	</nav>
 </head>
 
+<header>
+	<!-- Other header content goes here -->
+
+	<h1>Juhon Kahvila</h1>
+
+</header>
+
 <body>
-	<header>
-		<!-- Other header content goes here -->
 
-		<h1>Juhon Kahvila</h1>
+	<section class="grid-container">
+		<div class="grid-teksti1">
 
-		<figure>
-			<img id="vuorikuva" src="kuvat/mountain.jpg"
-				alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
-			<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
-		</figure>
-	</header>
-	<p class="esittely">Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
-	<h2>Teemme kahvia vain aidoista pavuista</h2>
-	<p><strong>Kahvimme</strong> tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä poimioita,
-		joille maksamme
-		palkkaa</p>
-	<h3>Arabica</h3>
-	<p>Arabica on kahvilaaduista parhain ja maukkain ja sopii opiskelijan kahvinhimoon sekä kofeiiniaddiktioon.</p>
+
+			<p class="esittely">Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
+			<h2>Teemme kahvia vain aidoista pavuista</h2>
+			<p><strong>Kahvimme</strong> tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä
+				poimioita,
+				joille maksamme
+				palkkaa</p>
+			<h3>Arabica</h3>
+			<p>Arabica on kahvilaaduista parhain ja maukkain ja sopii opiskelijan kahvinhimoon sekä kofeiiniaddiktioon.
+			</p>
+		</div>
+		<div class="grid-kuva">
+			<figure>
+				<img id="vuorikuva" src="kuvat/mountain.jpg"
+					alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
+				<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
+			</figure>
+		</div>
+
+	</section>
+
 	<br>
 	<hr>
 	<br>
