--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 	<header id="etusivu">
-		<!-- Tästä alkaa navigaatio -->x
+		<!-- Tästä alkaa navigaatio -->
 		<nav>
 			<a href="index.html" id="valittu">Juhon Kahvila</a>
 			<a href="kahvit.html">Kahvimme</a>
@@ -59,18 +59,18 @@
 	<br>
 	<footer>
 		<div>
-			<a href="https://www.facebook.com/" target="_blank" ><i class="fa fa-facebook"</i></a>
-			<a href="index.html" class="instagram">Intagram</a>
-			<a href="index.html" class="youtube">YouTube</a>
+			  <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+			  <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
+			  <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
 		</div>
 		<div>
-			<p>Copyright &copy; 2023, Juhon Kahvila.</p>
+		   <p>Copyright &copy; 2023, Juhon Kahvila Oy</p>
 		</div>
 		<div>
-			<p><a href="mailto:info@ticocafe.fi">info.ticocafe.fi</a></p>
+		   <p><a href="mailto:info@ticocafe.fi">info@ticocafe.fi</a></p>
 		</div>
-		
-	</footer>
+	 </footer>
+
 </body>
 
 </html>
