--- a/kahvit.html
+++ b/kahvit.html
@@ -5,44 +5,67 @@
 	<title>Juhon Kahvila</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<!-- Linkitetään tähän CSS tyylitiedosto -->
 	<link rel="stylesheet" href="tyyli.css">
-
-	<!-- Tästä alkaa navigaatio -->
-	<nav>
-		<a href="index.html">Juhon Kahvila</a>
-		<a href="kahvit.html" id="valittu">Kahvimme</a>
-		<a href="galleria.html">Galleria</a>
-		<a href="yhteys.html">Ota yhteyttä</a>
-	</nav>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-	<header>
-		<!-- Other header content goes here -->
+	<header id="etusivu">
+		<!-- Tästä alkaa navigaatio -->
+		<nav>
+			<a href="index.html">Juhon Kahvila</a>
+			<a href="kahvit.html" id="valittu">Kahvimme</a>
+			<a href="galleria.html">Galleria</a>
+			<a href="yhteys.html">Ota yhteyttä</a>
+		</nav>
 
-		<h1>Kahvimme</h1>
+		<!-- Tänne vaihdettu nav paikka ja uusi id = slogan -->
+		<h1 id="slogan">Juhon erinomaiset kofeiinivirvokkeet</h1>
 
-		<figure>
-			<img id="vuorikuva" src="kuvat/mountain.jpg"
-				alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
-			<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
-		</figure>
+		<!-- Tänne tulee toimintakehote ja linkki ota yhteyttä sivulle Comment with SHIFT ALT A -->
+		<a href="yhteys.html" id="toimintakehote">Poikkea meille!</a>
 	</header>
-	<p class="esittely">Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
-	<h2>Teemme kahvia vain aidoista pavuista</h2>
-	<p><strong>Kahvimme</strong> tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä poimioita,
-		joille maksamme
-		palkkaa</p>
-	<h3>Arabica</h3>
-	<p>Arabica on kahvilaaduista parhain ja maukkain ja sopii opiskelijan kahvinhimoon sekä kofeiiniaddiktioon.</p>
+
+	<section class="grid-container">
+		<div class="grid-teksti1">
+			<p class="esittely">Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
+			<h2>Teemme kahvia vain aidoista pavuista</h2>
+			<p><strong>Kahvimme</strong> tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä
+				poimioita,
+				joille maksamme
+				palkkaa</p>
+			<h3>Arabica</h3>
+			<p>Arabica on kahvilaaduista parhain ja maukkain ja sopii opiskelijan kahvinhimoon sekä kofeiiniaddiktioon.
+			</p>
+		</div>
+		<div class="grid-kuva">
+			<figure>
+				<img id="vuorikuva" src="kuvat/mountain.jpg"
+					alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
+				<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
+			</figure>
+		</div>
+
+	</section>
+
 	<br>
 	<hr>
 	<br>
 	<footer>
-		<p>Copyright &copy; 2023, Juhon Kahvila.</p>
+		<div>
+			<a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+			<a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
+			<a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+		</div>
+		<div>
+			<p>Copyright &copy; 2023, Juhon Kahvila Oy</p>
+		</div>
+		<div>
+			<p><a href="mailto:info@ticocafe.fi">info@ticocafe.fi</a></p>
+		</div>
 	</footer>
+
 </body>
 
 </html>
