--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<header id="etusivu">
 		<!-- Tästä alkaa navigaatio -->
 		<nav>
+			
 			<a href="index.html" id="valittu">Juhon Kahvila</a>
 			<a href="kahvit.html">Kahvimme</a>
 			<a href="galleria.html">Galleria</a>
@@ -59,7 +60,7 @@
 			<a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
 		</div>
 		<div>
-			<p>Copyright &copy; 2023, Juhon Kahvila Oy</p>
+			<p>2023, Juhon Kahvila Oy</p>
 		</div>
 		<div>
 			<p><a href="mailto:info@ticocafe.fi">info@ticocafe.fi</a></p>
