--- a/yhteys.html
+++ b/yhteys.html
@@ -21,30 +21,18 @@
 		</nav>
 
 		<!-- Tänne vaihdettu nav paikka ja uusi id = slogan -->
-		<h1 id="slogan">Juhon erinomaiset kofeiinivirvokkeet</h1>
+		<h1 id="slogan">Olemme täällä sinua varten</h1>
 
-		<!-- Tänne tulee toimintakehote ja linkki ota yhteyttä sivulle Comment with SHIFT ALT A -->
-		<a href="yhteys.html" id="toimintakehote">Poikkea meille!</a>
 	</header>
 
 	<section class="grid-container">
 		<div class="grid-teksti1">
 			<p class="esittely">Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
-			<h2>Teemme kahvia vain aidoista pavuista</h2>
-			<p><strong>Kahvimme</strong> tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä
-				poimioita,
-				joille maksamme
-				palkkaa</p>
-			<h3>Arabica</h3>
-			<p>Arabica on kahvilaaduista parhain ja maukkain ja sopii opiskelijan kahvinhimoon sekä kofeiiniaddiktioon.
-			</p>
+			<h2>Ratapihantie 13, 00520 Helsinki</h2>
+
 		</div>
 		<div class="grid-kuva">
-			<figure>
-				<img id="vuorikuva" src="kuvat/mountain.jpg"
-					alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
-				<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
-			</figure>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1982.7362008035004!2d24.931236877002565!3d60.20164847504846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469208606a60874b%3A0x50a651a72fbb180b!2sHaaga-Helia%20University%20of%20Applied%20Sciences%20-%20Pasila%20campus!5e0!3m2!1sen!2sfi!4v1709885663492!5m2!1sen!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 
 	</section>
