--- a/galleria.html
+++ b/galleria.html
@@ -21,7 +21,7 @@
 		</nav>
 
 		<!-- Tänne vaihdettu nav paikka ja uusi id = slogan -->
-		<h1 id="slogan">Juhon erinomaiset kofeiinivirvokkeet</h1>
+		<h1 id="slogan">Galleria</h1>
 
 		<!-- Tänne tulee toimintakehote ja linkki ota yhteyttä sivulle Comment with SHIFT ALT A -->
 		<a href="yhteys.html" id="toimintakehote">Poikkea meille!</a>
