--- a/kahvit.html
+++ b/kahvit.html
@@ -21,7 +21,7 @@
 		</nav>
 
 		<!-- Tänne vaihdettu nav paikka ja uusi id = slogan -->
-		<h1 id="slogan">Juhon erinomaiset kofeiinivirvokkeet</h1>
+		<h1 id="slogan">kahvit</h1>
 
 		<!-- Tänne tulee toimintakehote ja linkki ota yhteyttä sivulle Comment with SHIFT ALT A -->
 		<a href="yhteys.html" id="toimintakehote">Poikkea meille!</a>
@@ -29,7 +29,7 @@
 
 	<section class="grid-container">
 		<div class="grid-teksti1">
-			<p class="esittely">Tervetuloa nauttimaan maukkausta kahveista Tico kahvilaan Haaga-Heliaan!</p>
+			<p class="esittely">Kahvimme sivun esittelyteksti tähän</p>
 			<h2>Teemme kahvia vain aidoista pavuista</h2>
 			<p><strong>Kahvimme</strong> tulevat Afrikasta vain kestävän kehityksen tiloilta ja käytämme niissä
 				poimioita,
