--- a/yhteys.html
+++ b/yhteys.html
@@ -32,7 +32,7 @@
 
 		</div>
 		<div class="grid-kuva">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1982.7362008035004!2d24.931236877002565!3d60.20164847504846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469208606a60874b%3A0x50a651a72fbb180b!2sHaaga-Helia%20University%20of%20Applied%20Sciences%20-%20Pasila%20campus!5e0!3m2!1sen!2sfi!4v1709885663492!5m2!1sen!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<iframe id="kartta" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1982.7362008035004!2d24.931236877002565!3d60.20164847504846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469208606a60874b%3A0x50a651a72fbb180b!2sHaaga-Helia%20University%20of%20Applied%20Sciences%20-%20Pasila%20campus!5e0!3m2!1sen!2sfi!4v1709885663492!5m2!1sen!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 
 	</section>
