--- a/index.html
+++ b/index.html
@@ -39,14 +39,32 @@
 			<h3>Arabica</h3>
 			<p>Arabica on kahvilaaduista parhain ja maukkain ja sopii opiskelijan kahvinhimoon sekä kofeiiniaddiktioon.
 			</p>
+			<p>Astupa sisään Tico kahvilaan Haaga-Heliaan – missä jokainen kupillinen on makumatka Afrikan kestävän kehityksen tiloilta suoraan mukiisi!
+			</p>
+			<p>Kahvimme eivät ole vain juomaa, ne ovat tarina herkullisista kahvipavuista, joita kunnioitamme aina paahtamiseen saakka.
+			</p>
+			<p>Arabica, se salainen ainesosa opiskelijan onnistuneeseen päivään. Tarjoamme parasta laatua, sillä tiedämme, että jokainen päivä alkaa paremmin hyvän kahvin kera."
+
+				"Tico kahvilassa emme vain nauti kahvista, vaan teemme siitä taidetta – yksi aromikas kupillinen kerrallaan!
+			</p>
+			<p>Kahvila, jossa arvostetaan jokaisen pavun vaivannäköä – täällä kofeiinista tulee elämys ja jokainen sipsaus on kuin matka maailman parhaille kahviviljelmille.
+			</p>
+			<h3>Tule myös kuuntelemaan Taylor Swiftia kahvilaamme.</h3>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/b1kbLwvqugk?si=_6YVaT5elM91wMEU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+			<br>
+			<br>
+			<br>
+
 		</div>
 		<div class="grid-kuva">
 			<figure>
 				<img id="vuorikuva" src="kuvat/mountain.jpg"
 					alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
-				<figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
+				<figcaption>Tässä on vuorikuva sekä mahdollisia kahvipapuja</figcaption>
 			</figure>
 		</div>
+
 
 	</section>
 
