--- a/galleria.html
+++ b/galleria.html
@@ -49,7 +49,7 @@
             <figure>
                 <img id="vuorikuva" src="kuvat/spice.jpg"
                     alt="vuorikuva jossa pilviä ja saattaa olla myös kahvipapuja hyvällä tuurilla">
-                <figcaption>Tässä on vuorikuva kahvipapuja</figcaption>
+                <figcaption>Kahvipavut: maailman pienimmät mutta tehokkaimmat superherrat – he jaksavat piristää päiväsi yhdellä ainoalla paahtoasteella!</figcaption>
             </figure>
         </div>
 
@@ -57,35 +57,35 @@
         <div class="grid-kuva">
             <figure>
                 <img src="kuvat/spoon.jpg" alt="Kuva 2">
-                <figcaption>Kuvateksti 2</figcaption>
+                <figcaption>Kofeiini: se taikajuoma, joka saa kahvipavut tanssimaan aamukupissasi – eikä sinun tarvitse edes pyytää lupaa!</figcaption>
             </figure>
         </div>
 
         <div class="grid-kuva">
             <figure>
                 <img src="kuvat/sydan.jpg" alt="Kuva 3">
-                <figcaption>Kuvateksti 3</figcaption>
+                <figcaption>Miksi kahvipapu ei koskaan ollut huono stand-up-koomikko? Koska se aina pitää yleisön hereillä!</figcaption>
             </figure>
         </div>
 
         <div class="grid-kuva">
             <figure>
                 <img src="kuvat/hiekkaranta_pieni.jpg" alt="Kuva 4">
-                <figcaption>Kuvateksti 4</figcaption>
+                <figcaption>Kofeiini – kuin kahvin oma superteho! Paahtoasteet kohoavat, kun tarvitset sankareita aamuusi.</figcaption>
             </figure>
         </div>
 
         <div class="grid-kuva">
             <figure>
                 <img src="kuvat/beans.jpg" alt="Kuva 5">
-                <figcaption>Kuvateksti 5</figcaption>
+                <figcaption>Mitä kahvipapu sanoi parhaalle ystävälleen? 'Olet kofeiinini – ilman sinua en olisi koskaan näin hereillä!</figcaption>
             </figure>
         </div>
 
         <div class="grid-kuva">
             <figure>
                 <img src="kuvat/redbeans.jpg" alt="Kuva 6">
-                <figcaption>Kuvateksti 6</figcaption>
+                <figcaption>Kahvipavut ovat kuin salainen agenttiarmeija, ja kofeiini on niiden supervoima. Yhdessä ne muodostavat ylivertaisen aamuarmeijan!</figcaption>
             </figure>
         </div>
     </section>
