--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 			<p>Kahvila, jossa arvostetaan jokaisen pavun vaivannäköä – täällä kofeiinista tulee elämys ja jokainen sipsaus on kuin matka maailman parhaille kahviviljelmille.
 			</p>
 			<h3>Tule myös kuuntelemaan Taylor Swiftia kahvilaamme.</h3>
-			<iframe width="400" height="315" src="https://www.youtube.com/embed/b1kbLwvqugk?si=_6YVaT5elM91wMEU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+			<div class="video-container">
+				<iframe src="https://www.youtube.com/embed/b1kbLwvqugk?si=vFDDJx0dy9CJZ8E5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
 			<br>
 			<br>
 			<br>
