galleria nyt responsiivinen

--- a/galleria.html
+++ b/galleria.html
@@ -43,7 +43,7 @@
 		<a href="yhteys.html" id="toimintakehote">Poikkea meille!</a>
 	</header>
 
-	<section class="grid-container">
+	<section class="galleria-container">
         <!-- Kuvagalleria -->
         <div class="grid-kuva">
             <figure>
